# tp-algorithimique-l3

./: README.md
TP_ARBRES/: CMakeLists.txt  structure.h
TP_ARBRES/exerciceArbres/: exerciceArbres.c  fonctionArbre.c  main.c
TP_ARBRES/exerciceTas/: exerciceTas.c  main.c
